# sw360-dashboard

./: .env.example  .gitignore  AWS_EXPORTER_README.md  CRP_DASHBOARD_README.md  Dockerfile  Dockerfile.grafana  LICENSE  README.md  REUSE.toml  dashboard_cron.sh  pyproject.toml
.github/workflows/: lint.yml  reuse-lint.yml
ansible/: README.md  playbook.yml
ansible/templates/: prometheus.service.j2  pushgateway.service.j2
grafana/: apache-sw360.conf  grafana.ini
grafana/dashboards/: components_releases_projects.json
grafana/provisioning/: dashboards.yaml  datasources.yaml
grafana/templates/: aws.json.jinja2  cli.json.jinja2  dept.json.jinja2  global.json.jinja2
scripts/: generate_groups.py
src/sw360_dashboard/: __init__.py  aws_cloudwatch_exporter.py  aws_cloudwatch_utils.py  collect_components_releases_projects_data.py  couchdb_CRP_exporter.py  couchdb_common_metrics.py  couchdb_utils.py
templates/: aws_cloudwatch_exporter.py.jinja2  cli.py.jinja2  collect_components_releases_projects_data.py  couchdb_CLI_exporter.py.jinja2  couchdb_CRP_exporter.py.jinja2  couchdb_DEPT_exporter.py.jinja2
tests/: __init__.py
