[project]
name = "sw360-dashboard"
version = "0.1.0"
description = "Gather and push data from SW360 to Prometheus to be displayed on Grafana dashboard."
authors = [
    {name = "Eldrin Sanctis", email = "eldrin.sanctis@siemens.com"},
    {name = "Gaurav Mishra", email = "mishra.gaurav@siemens.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "ibmcloudant (>=0.10.0,<0.11.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "requests (>=2.32.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "sw360_dashboard", from = "src"}]

[project.scripts]
sw360-exporter = "sw360_dashboard.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-groups = "scripts.generate_groups:main"
